--- a/index.html
+++ b/index.html
@@ -175,36 +175,36 @@
             <div class="download-grid">
                 <div class="download-card">
                     <div class="icon">1</div>
-                    <h3>Bereich 1</h3>
-                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Dienstag</p>
+                    <h3>Elsdorf, Desdorf</h3>
+                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 1</p>
                     <a href="Abfallkalender_2026_Bereich1.ics" class="download-btn" download>Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">2</div>
-                    <h3>Bereich 2</h3>
-                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Mittwoch</p>
+                    <h3>Niederembt, Oberembt, Tollhausen, Neu-Etzweiler, Frankeshoven</h3>
+                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 2</p>
                     <a href="Abfallkalender_2026_Bereich2.ics" class="download-btn" download>Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">3</div>
-                    <h3>Bereich 3</h3>
-                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Donnerstag</p>
+                    <h3>Esch, Angelsdorf</h3>
+                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 3</p>
                     <a href="Abfallkalender_2026_Bereich3.ics" class="download-btn" download>Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">4</div>
-                    <h3>Bereich 4</h3>
-                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Freitag</p>
+                    <h3>Berrendorf, Grouven</h3>
+                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 4</p>
                     <a href="Abfallkalender_2026_Bereich4.ics" class="download-btn" download>Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">5</div>
-                    <h3>Bereich 5</h3>
-                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Montag</p>
+                    <h3>Heppendorf, Giesendorf, Widdendorf</h3>
+                    <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 5</p>
                     <a href="Abfallkalender_2026_Bereich5.ics" class="download-btn" download>Download .ics</a>
                 </div>
             </div>
