--- a/index.html
+++ b/index.html
@@ -177,35 +177,35 @@
                     <div class="icon">1</div>
                     <h3>Elsdorf, Desdorf</h3>
                     <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 1</p>
-                    <a href="Abfallkalender_2026_Bereich1.ics" class="download-btn" download>Download .ics</a>
+                    <a href="https://raw.githubusercontent.com/jankopic/abfallkalender-elsdorf-2026/main/Abfallkalender_2026_Bereich1.ics" class="download-btn">Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">2</div>
                     <h3>Niederembt, Oberembt, Tollhausen, Neu-Etzweiler, Frankeshoven</h3>
                     <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 2</p>
-                    <a href="Abfallkalender_2026_Bereich2.ics" class="download-btn" download>Download .ics</a>
+                    <a href="https://raw.githubusercontent.com/jankopic/abfallkalender-elsdorf-2026/main/Abfallkalender_2026_Bereich2.ics" class="download-btn">Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">3</div>
                     <h3>Esch, Angelsdorf</h3>
                     <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 3</p>
-                    <a href="Abfallkalender_2026_Bereich3.ics" class="download-btn" download>Download .ics</a>
+                    <a href="https://raw.githubusercontent.com/jankopic/abfallkalender-elsdorf-2026/main/Abfallkalender_2026_Bereich3.ics" class="download-btn">Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">4</div>
                     <h3>Berrendorf, Grouven</h3>
                     <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 4</p>
-                    <a href="Abfallkalender_2026_Bereich4.ics" class="download-btn" download>Download .ics</a>
+                    <a href="https://raw.githubusercontent.com/jankopic/abfallkalender-elsdorf-2026/main/Abfallkalender_2026_Bereich4.ics" class="download-btn">Download .ics</a>
                 </div>
 
                 <div class="download-card">
                     <div class="icon">5</div>
                     <h3>Heppendorf, Giesendorf, Widdendorf</h3>
                     <p style="color: #666; margin-bottom: 15px; font-size: 0.9rem;">Bereich 5</p>
-                    <a href="Abfallkalender_2026_Bereich5.ics" class="download-btn" download>Download .ics</a>
+                    <a href="https://raw.githubusercontent.com/jankopic/abfallkalender-elsdorf-2026/main/Abfallkalender_2026_Bereich5.ics" class="download-btn">Download .ics</a>
                 </div>
             </div>
 
@@ -255,8 +255,8 @@
         </div>
 
         <footer>
-            <p>Abfallkalender 2026 - Stadt Elsdorf</p>
-            <p style="margin-top: 10px;">Alle Angaben ohne Gewahr.</p>
+            <p>Abfallkalender 2026</p>
+            <p style="margin-top: 10px;">Alle Angaben ohne Gewähr.</p>
         </footer>
     </div>
 </body>
